Project

General

Profile

Actions

Fix #61378

closed

mds: turn off MDS balancer by default

Added by Patrick Donnelly 11 months ago. Updated 2 months ago.

Status:
Resolved
Priority:
High
Category:
Administration/Usability
Target version:
% Done:

0%

Source:
Community (user)
Tags:
backport_processed
Backport:
reef
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Operators should deliberately decide to turn on the balancer. Most folks with multiple active MDS are using pinning. Any balancer activity is usually undesired and causes performance issues.

The balancer should be turned off via the MDSMap so that all MDS agree on whether the balancer should operate.


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #63838: reef: mds: turn off MDS balancer by defaultResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly 11 months ago

  • Description updated (diff)
Actions #2

Updated by Patrick Donnelly 10 months ago

  • Status changed from New to In Progress
  • Assignee set to Patrick Donnelly
Actions #3

Updated by Patrick Donnelly 10 months ago

  • Pull request ID set to 52196
Actions #4

Updated by Patrick Donnelly 6 months ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Patrick Donnelly 4 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Backport Bot 4 months ago

  • Copied to Backport #63838: reef: mds: turn off MDS balancer by default added
Actions #7

Updated by Backport Bot 4 months ago

  • Tags set to backport_processed
Actions #8

Updated by Patrick Donnelly 2 months ago

  • Category set to Administration/Usability
  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF